...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/camerabtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/camera"
            android:contentDescription="@string/camera_cd"
            android:padding="4dp"
            android:layout_gravity="start"
...
            android:contentDescription="@string/igtv_cd"
            android:padding="4dp"
            android:layout_gravity="end"
            app:tint="@color/orange_app"/>

        <ImageView
            android:id="@+id/igdirectbtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/igdirect"
            android:contentDescription="@string/igdirect_cd"
            android:padding="4dp"
            android:layout_gravity="end"
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/like_button2"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/like_button_selector"
                        android:contentDescription="like_button_cd"
                        app:tint="@color/black"/>

...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/like_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/like_button_selector"
                        android:contentDescription="like_button_cd"
                        app:tint="@color/black"/>

...
