...
            app:tint="@color/orange_app"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_corners"
        android:padding="12dp"
        android:gravity="center_vertical"
...
            android:src="@drawable/search"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Search"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
...
