...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="start"
                        android:src="@drawable/person1opened"
                        android:contentDescription="profile_image_desc"
                        android:scaleType="centerCrop"
...
                                android:layout_gravity="center" />

                            <TextView
                                android:id="@+id/following_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Following"
                                android:textSize="14sp"
                                android:layout_gravity="center" />


                        </LinearLayout>
                    </LinearLayout>
...
